feat: Add OpenAI-style voice input with speech-to-text
- Add voice recording with shimmer 'Recording...' and 'Transcribing...' states
- Integrate speech_to_text for transcription
- Add permission_handler for iOS/macOS microphone permissions
- Show 'Open Settings' dialog when permissions permanently denied
- Support continuous permission requests until permanently denied
- Add voice input support to LiquidGlassTextField (enableVoiceInput param)
- Voice input always enabled for LiquidGlassMessageInput
- Update FlutterFlow wrappers with voice input documentation
- Add iOS/macOS Info.plist permission keys to example app
- Add voice input demo to example app
- Graceful error handling with auto-dismissing red banners
- No black background on shimmer text
- Hide placeholder during recording/transcribing

--- a/example/ios/Runner/Info.plist
+++ b/example/ios/Runner/Info.plist
@@ -45,5 +45,9 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>This app needs access to your microphone for voice input.</string>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>This app needs access to speech recognition to transcribe your voice.</string>
 </dict>
 </plist>
