--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   flutter:
     sdk: flutter
   plugin_platform_interface: ^2.0.2
+  speech_to_text: ^7.0.0
+  permission_handler: ^11.3.0
 
 dev_dependencies:
   flutter_test:
