Optimize Liquid Glass performance: Remove 60fps rebuilds, implement ValueNotifier animation loop, and add LiquidGlassContainer

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ flutter:
       macos:
         pluginClass: CupertinoNativePlugin
 
+  shaders:
+    - lib/shaders/liquid_glass.frag
+
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
